// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Message.svelte > should render empty 1`] = `
<div>
  
</div>
`;

exports[`Message.svelte > should render error message 1`] = `
<div>
  <message
    class="error"
  >
    Error
  </message>
  
</div>
`;

exports[`Message.svelte > should render error message 2`] = `
<div>
  <message
    class="info"
  >
    Info
  </message>
  
</div>
`;
